so so much, the d3 on the website under /test is fully functional completely built from ground up with no view controls yet. iotlib created, freaking forgot to add ping to the API, and database was given some extra models like authorization if I get around to it
